# flowMC

./: .all-contributorsrc  .gitattributes  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: CI.yml  run_tests.yml  workflowsjoss.yml
docs/: communityExamples.md  index.md  quickstart.md  requirements.txt
src/flowMC/: Sampler.py
src/flowMC/resource/: buffers.py  logPDF.py  states.py
src/flowMC/resource/kernel/: Gaussian_random_walk.py  HMC.py  MALA.py  NF_proposal.py  base.py
src/flowMC/resource/model/flowmatching/: base.py
src/flowMC/resource/model/nf_model/: base.py  realNVP.py  rqSpline.py
src/flowMC/resource_strategy_bundle/: RQSpline_GRW.py  RQSpline_GRW_PT.py  RQSpline_HMC.py  RQSpline_HMC_PT.py  RQSpline_MALA.py  RQSpline_MALA_PT.py
src/flowMC/strategy/: adapt_step_size.py  early_stopping.py  optimization.py  parallel_tempering.py  take_steps.py  train_model.py  update_state.py
src/flowMC/utils/: __init__.py  logging.py
test/unit/: test_kernels.py  test_nf.py  test_strategies.py
tests/integration/: test_HMC.py  test_MALA.py
tests/unit/: test_bundle.py  test_kernels.py  test_resources.py  test_strategies.py
