[project]
name = "flowMC"
version = "0.4.5"
description = "Normalizing flow exhanced sampler in jax"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kaze Wong", email = "kazewong.physics@gmail.com"},
    { name = "Marylou Gabrié"},
    { name = "Dan Foreman-Mackey"}
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
keywords = ["sampling", "inference", "machine learning", "normalizing", "autodiff", "jax"]

dependencies = [
    "diffrax>=0.7.0",
    "equinox>=0.13.2",
    "jax>=0.8.2",
    "jaxtyping>=0.3.3",
    "optax>=0.2.6",
    "tqdm>=4.67.1",
]

[project.urls]
Documentation = "https://github.com/GW-JAX-Team/flowMC"

[project.optional-dependencies]
docs = [
    "mkdocs-gen-files==0.6.0",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "mkdocstrings[python]==1.0.0",
    "pymdown-extensions==10.20",
]
visualize = [
    "arviz>=0.21.0",
    "corner>=2.2.3",
    "matplotlib>=3.10.7",
]
cuda = [
    "jax[cuda]>=0.8.2",
]

[dependency-groups]
dev = [
    "flowMC",
    "ipykernel>=6.29.5",
    "coveralls>=4.0.1",
    "pre-commit>=4.0.1",
    "pyright>=1.1.402",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.2",
    "ipython>=8.30.0",
]

[tool.uv.sources]
flowMC = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["F722"]

[tool.pyright]
include = [
    "src",
    "tests",
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\. )?abstractmethod",
]
